--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
         <div class="buttons">
             <button class="btn btn-large" id="generateBtn">
-                <i class="fas fa-key"></i> Genrate
+                <i class="fas fa-key"></i> Generate
             </button>
             <button class="btn" id="clipboardBtn">
                 <i class="far fa-clipboard"></i> Copy
